Start using TextComponents with display names and lore