@@ -52,6 +52,8 @@ import me.eccentric_nz.tardisweepingangels.nms.TWAFollower;
 import me.eccentric_nz.tardisweepingangels.utils.FollowerChecker;
 import me.eccentric_nz.tardisweepingangels.utils.HeadBuilder;
 import me.eccentric_nz.tardisweepingangels.utils.Monster;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.TextComponent;
 import net.kyori.adventure.text.format.NamedTextColor;
 import net.kyori.adventure.text.format.TextDecoration;
 import org.bukkit.*;
@@ -447,10 +449,10 @@ public class TARDII implements TardisAPI {
         if (item.endsWith("TARDIS Invisibility Circuit")) {
             // set the second line of lore
             ItemMeta im = result.getItemMeta();
-            List<String> lore = im.getLore();
+            List<Component> lore = im.lore();
             String uses = (TARDIS.plugin.getConfig().getInt("circuits.uses.invisibility", 5) == 0 || !TARDIS.plugin.getConfig().getBoolean("circuits.damage")) ? NamedTextColor.YELLOW + "unlimited" : NamedTextColor.YELLOW + TARDIS.plugin.getConfig().getString("circuits.uses.invisibility");
-            lore.set(1, uses);
-            im.setLore(lore);
+            lore.set(1, Component.text(uses));
+            im.lore(lore);
             result.setItemMeta(im);
         }
         if (item.endsWith("Blank Storage Disk") || item.endsWith("Save Storage Disk") || item.endsWith("Preset Storage Disk") || item.endsWith("Biome Storage Disk") || item.endsWith("Player Storage Disk") || item.endsWith("Authorised Control Disk")) {
@@ -461,15 +463,15 @@ public class TARDII implements TardisAPI {
         if (item.endsWith("TARDIS Key") || item.endsWith("Authorised Control Disk")) {
             ItemMeta im = result.getItemMeta();
             im.getPersistentDataContainer().set(TARDIS.plugin.getTimeLordUuidKey(), TARDIS.plugin.getPersistentDataTypeUUID(), player.getUniqueId());
-            List<String> lore = im.getLore();
+            List<Component> lore = im.lore();
             if (lore == null) {
                 lore = new ArrayList<>();
             }
-            String format = NamedTextColor.AQUA + "" + TextDecoration.ITALIC;
+            TextComponent format = Component.text().color(NamedTextColor.AQUA).decorate(TextDecoration.ITALIC).build();
             String what = item.endsWith("TARDIS Key") ? "key" : "disk";
-            lore.add(format + "This " + what + " belongs to");
-            lore.add(format + player.getName());
-            im.setLore(lore);
+            lore.add(Component.text().append(format).append(Component.text("This ")).append(Component.text(what)).append(Component.text(" belongs to")).build());
+            lore.add(Component.text().append(format).append(Component.text(player.getName())).build());
+            im.lore(lore);
             result.setItemMeta(im);
         }
         return result;
@@ -502,13 +504,13 @@ public class TARDII implements TardisAPI {
             im.setItemModel(model);
             im.getPersistentDataContainer().set(TARDIS.plugin.getCustomBlockKey(), PersistentDataType.STRING, model.getKey());
             // set display name
-            im.setDisplayName(NamedTextColor.GOLD + "TARDIS Seed Block");
-            List<String> lore = new ArrayList<>();
-            lore.add(schematic);
-            lore.add("Walls: ORANGE_WOOL");
-            lore.add("Floors: LIGHT_GRAY_WOOL");
-            lore.add("Chameleon: FACTORY");
-            im.setLore(lore);
+            im.displayName(Component.text(NamedTextColor.GOLD + "TARDIS Seed Block"));
+            List<TextComponent> lore = new ArrayList<>();
+            lore.add(Component.text(schematic));
+            lore.add(Component.text("Walls: ORANGE_WOOL"));
+            lore.add(Component.text("Floors: LIGHT_GRAY_WOOL"));
+            lore.add(Component.text("Chameleon: FACTORY"));
+            im.lore(lore);
             is.setItemMeta(im);
             return is;
         }
@@ -585,9 +587,13 @@ public class TARDII implements TardisAPI {
                 PersistentDataContainer pdc = im.getPersistentDataContainer();
                 pdc.set(TARDIS.plugin.getTimeLordUuidKey(), TARDIS.plugin.getPersistentDataTypeUUID(), player.getUniqueId());
                 pdc.set(TARDIS.plugin.getBlueprintKey(), PersistentDataType.STRING, perm);
-                im.setDisplayName("TARDIS Blueprint Disk");
-                List<String> lore = Arrays.asList(TARDISStringUtils.capitalise(item), "Valid only for", player.getName());
-                im.setLore(lore);
+                im.displayName(Component.text("TARDIS Blueprint Disk"));
+                List<TextComponent> lore = List.of(
+                        Component.text(TARDISStringUtils.capitalise(item)),
+                        Component.text("Valid only for"),
+                        Component.text(player.getName())
+                );
+                im.lore(lore);
                 im.addItemFlags(ItemFlag.values());
                 is.setItemMeta(im);
                 return is;
