@@ -18,10 +18,13 @@ package me.eccentric_nz.TARDIS.chameleon.gui;
 
 import me.eccentric_nz.TARDIS.TARDIS;
 import me.eccentric_nz.TARDIS.custommodels.GUIChameleonTemplate;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.TextComponent;
 import org.bukkit.Material;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -43,113 +46,117 @@ class TARDISChameleonTemplateGUI {
         // back button
         ItemStack back = new ItemStack(GUIChameleonTemplate.BACK_HELP.material(), 1);
         ItemMeta bk = back.getItemMeta();
-        bk.setDisplayName(plugin.getChameleonGuis().getString("BACK_HELP"));
+        bk.displayName(Component.text(plugin.getChameleonGuis().getString("BACK_HELP")));
         bk.setItemModel(GUIChameleonTemplate.BACK_HELP.key());
         back.setItemMeta(bk);
         // info
         ItemStack info = new ItemStack(GUIChameleonTemplate.INFO_TEMPLATE.material(), 1);
         ItemMeta io = info.getItemMeta();
-        io.setDisplayName(plugin.getChameleonGuis().getString("INFO"));
-        io.setLore(plugin.getChameleonGuis().getStringList("INFO_TEMPLATE"));
+        io.displayName(Component.text(plugin.getChameleonGuis().getString("INFO")));
+        List<TextComponent> lore = new ArrayList<>();
+        for (String s : plugin.getChameleonGuis().getStringList("INFO_TEMPLATE")) {
+            lore.add(Component.text(s));
+        }
+        io.lore(lore);
         io.setItemModel(GUIChameleonTemplate.INFO_TEMPLATE.key());
         info.setItemMeta(io);
         // next button
         ItemStack next = new ItemStack(GUIChameleonTemplate.GO_CONSTRUCT.material(), 1);
         ItemMeta nt = next.getItemMeta();
-        nt.setDisplayName(plugin.getChameleonGuis().getString("GO_CONSTRUCT"));
+        nt.displayName(Component.text(plugin.getChameleonGuis().getString("GO_CONSTRUCT")));
         nt.setItemModel(GUIChameleonTemplate.GO_CONSTRUCT.key());
         next.setItemMeta(nt);
         // one
         ItemStack one = new ItemStack(GUIChameleonTemplate.COL_L_FRONT.material(), 1);
         ItemMeta oe = one.getItemMeta();
-        oe.setDisplayName("1");
-        oe.setLore(List.of(plugin.getChameleonGuis().getString("COL_L_FRONT")));
+        oe.displayName(Component.text("1"));
+        oe.lore(List.of(Component.text(plugin.getChameleonGuis().getString("COL_L_FRONT"))));
         oe.setItemModel(GUIChameleonTemplate.COL_L_FRONT.key());
         one.setItemMeta(oe);
         // two
         ItemStack two = new ItemStack(GUIChameleonTemplate.COL_L_MIDDLE.material(), 1);
         ItemMeta to = two.getItemMeta();
-        to.setDisplayName("2");
-        to.setLore(List.of(plugin.getChameleonGuis().getString("COL_L_MIDDLE")));
+        to.displayName(Component.text("2"));
+        to.lore(List.of(Component.text(plugin.getChameleonGuis().getString("COL_L_MIDDLE"))));
         to.setItemModel(GUIChameleonTemplate.COL_L_MIDDLE.key());
         two.setItemMeta(to);
         // three
         ItemStack three = new ItemStack(GUIChameleonTemplate.COL_L_BACK.material(), 1);
         ItemMeta te = three.getItemMeta();
-        te.setDisplayName("3");
-        te.setLore(List.of(plugin.getChameleonGuis().getString("COL_L_BACK")));
+        te.displayName(Component.text("3"));
+        te.lore(List.of(Component.text(plugin.getChameleonGuis().getString("COL_L_BACK"))));
         te.setItemModel(GUIChameleonTemplate.COL_L_BACK.key());
         three.setItemMeta(te);
         // four
         ItemStack four = new ItemStack(GUIChameleonTemplate.COL_B_MIDDLE.material(), 1);
         ItemMeta fr = four.getItemMeta();
-        fr.setDisplayName("4");
-        fr.setLore(List.of(plugin.getChameleonGuis().getString("COL_B_MIDDLE")));
+        fr.displayName(Component.text("4"));
+        fr.lore(List.of(Component.text(plugin.getChameleonGuis().getString("COL_B_MIDDLE"))));
         fr.setItemModel(GUIChameleonTemplate.COL_B_MIDDLE.key());
         four.setItemMeta(fr);
         // five
         ItemStack five = new ItemStack(GUIChameleonTemplate.COL_R_BACK.material(), 1);
         ItemMeta fe = five.getItemMeta();
-        fe.setDisplayName("5");
-        fe.setLore(List.of(plugin.getChameleonGuis().getString("COL_R_BACK")));
+        fe.displayName(Component.text("5"));
+        fe.lore(List.of(Component.text(plugin.getChameleonGuis().getString("COL_R_BACK"))));
         fe.setItemModel(GUIChameleonTemplate.COL_R_BACK.key());
         five.setItemMeta(fe);
         // six
         ItemStack six = new ItemStack(GUIChameleonTemplate.COL_R_MIDDLE.material(), 1);
         ItemMeta sx = six.getItemMeta();
-        sx.setDisplayName("6");
-        sx.setLore(List.of(plugin.getChameleonGuis().getString("COL_R_MIDDLE")));
+        sx.displayName(Component.text("6"));
+        sx.lore(List.of(Component.text(plugin.getChameleonGuis().getString("COL_R_MIDDLE"))));
         sx.setItemModel(GUIChameleonTemplate.COL_R_MIDDLE.key());
         six.setItemMeta(sx);
         // seven
         ItemStack seven = new ItemStack(GUIChameleonTemplate.COL_R_FRONT.material(), 1);
         ItemMeta sn = seven.getItemMeta();
-        sn.setDisplayName("7");
-        sn.setLore(List.of(plugin.getChameleonGuis().getString("COL_R_FRONT")));
+        sn.displayName(Component.text("7"));
+        sn.lore(List.of(Component.text(plugin.getChameleonGuis().getString("COL_R_FRONT"))));
         sn.setItemModel(GUIChameleonTemplate.COL_R_FRONT.key());
         seven.setItemMeta(sn);
         // eight
         ItemStack eight = new ItemStack(GUIChameleonTemplate.COL_F_MIDDLE.material(), 1);
         ItemMeta et = eight.getItemMeta();
-        et.setDisplayName("8");
-        et.setLore(List.of(plugin.getChameleonGuis().getString("COL_F_MIDDLE")));
+        et.displayName(Component.text("8"));
+        et.lore(List.of(Component.text(plugin.getChameleonGuis().getString("COL_F_MIDDLE"))));
         et.setItemModel(GUIChameleonTemplate.COL_F_MIDDLE.key());
         eight.setItemMeta(et);
         // nine
         ItemStack nine = new ItemStack(GUIChameleonTemplate.COL_C_LAMP.material(), 1);
         ItemMeta ne = nine.getItemMeta();
-        ne.setDisplayName("9");
-        ne.setLore(List.of(plugin.getChameleonGuis().getString("COL_C_LAMP")));
+        ne.displayName(Component.text("9"));
+        ne.lore(List.of(Component.text(plugin.getChameleonGuis().getString("COL_C_LAMP"))));
         ne.setItemModel(GUIChameleonTemplate.COL_C_LAMP.key());
         nine.setItemMeta(ne);
         // redstone lamp
         ItemStack lamp = new ItemStack(Material.REDSTONE_LAMP, 1);
         ItemMeta lp = lamp.getItemMeta();
         List<String> lampList = plugin.getChameleonGuis().getStringList("PB_LAMP");
-        lp.setDisplayName(lampList.getFirst());
-        lp.setLore(Arrays.asList(lampList.get(1), lampList.get(2)));
+        lp.displayName(Component.text(lampList.getFirst()));
+        lp.lore(List.of(Component.text(lampList.get(1)), Component.text(lampList.get(2))));
         lamp.setItemMeta(lp);
         // redstone block
         ItemStack power = new ItemStack(Material.REDSTONE_BLOCK, 1);
         ItemMeta pr = power.getItemMeta();
-        pr.setDisplayName(plugin.getChameleonGuis().getString("POWER"));
+        pr.displayName(Component.text(plugin.getChameleonGuis().getString("POWER")));
         power.setItemMeta(pr);
         // stone slab
         ItemStack slab = new ItemStack(Material.STONE_SLAB, 1);
         ItemMeta sb = slab.getItemMeta();
-        sb.setDisplayName(plugin.getChameleonGuis().getString("PB_SIGN"));
+        sb.displayName(Component.text(plugin.getChameleonGuis().getString("PB_SIGN")));
         slab.setItemMeta(sb);
         // blue wool
         ItemStack blue = new ItemStack(Material.BLUE_WOOL, 1);
         ItemMeta be = blue.getItemMeta();
-        be.setDisplayName(plugin.getChameleonGuis().getString("PB_WALL"));
+        be.displayName(Component.text(plugin.getChameleonGuis().getString("PB_WALL")));
         blue.setItemMeta(be);
         // iron door
         ItemStack door = new ItemStack(Material.IRON_DOOR, 1);
         ItemMeta dr = door.getItemMeta();
         List<String> doorList = plugin.getChameleonGuis().getStringList("PB_DOOR");
-        dr.setDisplayName(doorList.getFirst());
-        dr.setLore(Arrays.asList(doorList.get(1), doorList.get(2)));
+        dr.displayName(Component.text(doorList.getFirst()));
+        dr.lore(List.of(Component.text(doorList.get(1)), Component.text(doorList.get(2))));
         door.setItemMeta(dr);
 
         return new ItemStack[]{back, null, null, null, info, null, null, null, next, one, two, three, four, five, six, seven, eight, nine, slab, slab, slab, slab, slab, slab, slab, slab, lamp, blue, blue, blue, blue, blue, blue, blue, blue, power, blue, blue, blue, blue, blue, blue, blue, door, null, blue, blue, blue, blue, blue, blue, blue, door, null};
