@@ -21,6 +21,7 @@ import me.eccentric_nz.TARDIS.custommodels.GUISavedPrograms;
 import me.eccentric_nz.TARDIS.custommodels.keys.DiskVariant;
 import me.eccentric_nz.TARDIS.database.data.Program;
 import me.eccentric_nz.TARDIS.database.resultset.ResultSetPrograms;
+import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.Material;
 import org.bukkit.inventory.ItemFlag;
@@ -28,6 +29,7 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * @author eccentric_nz
@@ -60,12 +62,21 @@ class TARDISHandlesSavedInventory {
             for (Program p : rs.getPrograms()) {
                 ItemStack is = new ItemStack(Material.MUSIC_DISC_WARD, 1);
                 ItemMeta im = is.getItemMeta();
-                im.setDisplayName("Handles Program Disk");
+                im.displayName(Component.text("Handles Program Disk"));
                 String checked = (p.isCheckedOut()) ? "Checked OUT" : "Checked IN";
                 if (!p.getParsed().isEmpty()) {
-                    im.setLore(Arrays.asList(p.getName(), p.getProgram_id() + "", checked, NamedTextColor.AQUA + "Running"));
+                    im.lore(List.of(
+                            Component.text(p.getName()),
+                            Component.text(p.getProgram_id()),
+                            Component.text(checked),
+                            Component.text().color(NamedTextColor.AQUA).append(Component.text("Running")).build()
+                    ));
                 } else {
-                    im.setLore(Arrays.asList(p.getName(), p.getProgram_id() + "", checked));
+                    im.lore(List.of(
+                            Component.text(p.getName()),
+                            Component.text(p.getProgram_id()),
+                            Component.text(checked)
+                    ));
                 }
                 im.addItemFlags(ItemFlag.values());
                 im.setItemModel(DiskVariant.HANDLES_DISK.getKey());
@@ -80,42 +91,42 @@ class TARDISHandlesSavedInventory {
         // back
         ItemStack back = new ItemStack(Material.ARROW, 1);
         ItemMeta bk = back.getItemMeta();
-        bk.setDisplayName("Back to editor");
+        bk.displayName(Component.text("Back to editor"));
         bk.setItemModel(GUISavedPrograms.BACK_TO_EDITOR.getModel());
         back.setItemMeta(bk);
         stack[45] = back;
         // load button
         ItemStack load = new ItemStack(Material.BOWL, 1);
         ItemMeta ld = load.getItemMeta();
-        ld.setDisplayName("Load selected program in editor");
+        ld.displayName(Component.text("Load selected program in editor"));
         ld.setItemModel(GUISavedPrograms.LOAD_SELECTED_PROGRAM_IN_EDITOR.getModel());
         load.setItemMeta(ld);
         stack[47] = load;
         // deactivate
         ItemStack deactivate = new ItemStack(Material.BUCKET, 1);
         ItemMeta dem = deactivate.getItemMeta();
-        dem.setDisplayName("Deactivate selected program");
+        dem.displayName(Component.text("Deactivate selected program"));
         dem.setItemModel(GUISavedPrograms.DEACTIVATE_SELECTED_PROGRAM.getModel());
         deactivate.setItemMeta(dem);
         stack[48] = deactivate;
         // delete
         ItemStack delete = new ItemStack(Material.BUCKET, 1);
         ItemMeta dm = delete.getItemMeta();
-        dm.setDisplayName("Delete selected program");
+        dm.displayName(Component.text("Delete selected program"));
         dm.setItemModel(GUISavedPrograms.DELETE_SELECTED_PROGRAM.getModel());
         delete.setItemMeta(dm);
         stack[49] = delete;
         // check out
         ItemStack checked = new ItemStack(Material.BOWL, 1);
         ItemMeta km = checked.getItemMeta();
-        km.setDisplayName("Check out selected program");
+        km.displayName(Component.text("Check out selected program"));
         km.setItemModel(GUISavedPrograms.CHECK_OUT_SELECTED_PROGRAM.getModel());
         checked.setItemMeta(km);
         stack[51] = checked;
         // close
         ItemStack close = new ItemStack(Material.BOWL, 1);
         ItemMeta cm = close.getItemMeta();
-        cm.setDisplayName(plugin.getLanguage().getString("BUTTON_CLOSE"));
+        cm.displayName(Component.text(plugin.getLanguage().getString("BUTTON_CLOSE")));
         cm.setItemModel(GUISavedPrograms.CLOSE.getModel());
         close.setItemMeta(cm);
         stack[53] = close;
