@@ -6,6 +6,7 @@ package me.eccentric_nz.tardisvortexmanipulator;
 import me.eccentric_nz.TARDIS.TARDIS;
 import me.eccentric_nz.TARDIS.enumeration.RecipeItem;
 import me.eccentric_nz.TARDIS.enumeration.TardisModule;
+import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
@@ -14,6 +15,7 @@ import org.bukkit.inventory.ShapedRecipe;
 import org.bukkit.inventory.meta.ItemMeta;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Set;
 
 /**
@@ -27,37 +29,36 @@ public class TVMRecipe {
         this.plugin = plugin;
     }
 
+    /*
+      shape: BBG,WOC,III
+      ingredients:
+        B: STONE_BUTTON
+        G: GLASS
+        W: CLOCK
+        O: GOLD_INGOT
+        C: COMPASS
+        I: IRON_INGOT
+      result: CLOCK
+      amount: 1
+      lore: "Cheap and nasty time travel"
+     */
     public ShapedRecipe makeRecipe() {
-        String[] result_iddata = plugin.getVortexConfig().getString("recipe.result").split(":");
-        Material mat = Material.valueOf(result_iddata[0]);
-        int amount = plugin.getVortexConfig().getInt("recipe.amount");
-        ItemStack is = new ItemStack(mat, amount);
+        ItemStack is = new ItemStack(Material.CLOCK, 1);
         ItemMeta im = is.getItemMeta();
-        im.setDisplayName(NamedTextColor.WHITE + "Vortex Manipulator");
-        if (!plugin.getVortexConfig().getString("recipe.lore").equals("")) {
-            im.setLore(Arrays.asList(plugin.getVortexConfig().getString("recipe.lore").split("~")));
-        }
+        im.displayName(Component.text(NamedTextColor.WHITE + "Vortex Manipulator"));
+        im.lore(List.of(Component.text("Cheap and nasty time travel")));
         im.setItemModel(RecipeItem.VORTEX_MANIPULATOR.getModel());
         is.setItemMeta(im);
         NamespacedKey key = new NamespacedKey(plugin, "vortex-manipulator");
         ShapedRecipe r = new ShapedRecipe(key, is);
-        // get shape
-        try {
-            String[] shape_tmp = plugin.getVortexConfig().getString("recipe.shape").split(",");
-            String[] shape = new String[3];
-            for (int i = 0; i < 3; i++) {
-                shape[i] = shape_tmp[i].replaceAll("-", " ");
-            }
-            r.shape(shape[0], shape[1], shape[2]);
-            Set<String> ingredients = plugin.getVortexConfig().getConfigurationSection("recipe.ingredients").getKeys(false);
-            ingredients.forEach((g) -> {
-                char c = g.charAt(0);
-                Material m = Material.valueOf(plugin.getVortexConfig().getString("recipe.ingredients." + g));
-                r.setIngredient(c, m);
-            });
-        } catch (IllegalArgumentException e) {
-            plugin.getMessenger().message(plugin.getConsole(), TardisModule.VORTEX_MANIPULATOR, "Recipe failed! Check the config file!");
-        }
+        // set shape
+        r.shape("BBG", "WOC", "III");
+        r.setIngredient('B', Material.STONE_BUTTON);
+        r.setIngredient('G', Material.GLASS);
+        r.setIngredient('W', Material.CLOCK);
+        r.setIngredient('O', Material.GOLD_INGOT);
+        r.setIngredient('C', Material.COMPASS);
+        r.setIngredient('I', Material.IRON_INGOT);
         // add the recipe to TARDIS' list
         plugin.getFigura().getShapedRecipes().put("Vortex Manipulator", r);
         // return the recipe
